[build-system]
requires = ["scikit-build-core>=0.10", "numpy>=2", "fypp>=3.1"]
build-backend = "scikit_build_core.build"

[project]
name = "fortress"
version = "0.1.5"
description = "Fortran tools (with Python bindings) for Bayesian time series"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ed Herbst"}]
dependencies = ["numpy", "pandas", "tqdm", "dsge"]

[tool.uv.sources]
dsge = { path = "/home/eherbst/Dropbox/code/dsge", editable = true }  

[project.scripts]
fortress-smc = "fortress._cli:run_smc"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
build.verbose = false

[tool.scikit-build.cmake.define]
ENABLE_MPI = { env = "ENABLE_MPI", default = "OFF" }
USE_SYSTEM_JSONFORTRAN = { env = "USE_SYSTEM_JSONFORTRAN", default = "OFF" }
USE_SYSTEM_FLAP = { env = "USE_SYSTEM_FLAP", default = "OFF" }
